--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 jwt.secret.key=${jwt.secret.key}
 jwt.time.access=${jwt.time.access}
 jwt.time.refresh=${jwt.time.refresh}
+
+# thymeleaf configuration
+#spring.thymeleaf.enabled=true
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
