--- a/src/main/resources/application-admin.properties
+++ b/src/main/resources/application-admin.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8081
 spring.application.name=StudyTrek
 
 # MySQL Database Configuration
@@ -23,6 +23,6 @@ jwt.time.refresh=${jwt.time.refresh}
 #spring.thymeleaf.enabled=true
 #spring.thymeleaf.encoding=UTF-8
 #spring.thymeleaf.check-template-location=true
-spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.prefix=classpath:/templates/admin/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
