✨ update : #82 AWS S3 properties 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,11 @@ jwt.time.refresh=${jwt.time.refresh}
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+# AWS S3
+cloud.aws.s3.bucket=<?? ??>
+cloud.aws.stack.auto=false
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.credentials.accessKey=<?? ?? accessKey>
+cloud.aws.credentials.secretKey=<?? ?? secretKey>
+
