--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,9 +27,7 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
 # AWS S3
-cloud.aws.s3.bucket=<?? ??>
-cloud.aws.stack.auto=false
 cloud.aws.region.static=ap-northeast-2
-cloud.aws.credentials.accessKey=<?? ?? accessKey>
-cloud.aws.credentials.secretKey=<?? ?? secretKey>
-
+cloud.aws.credentials.accessKey=
+cloud.aws.credentials.secretKey=
+cloud.aws.s3.bucket=
