--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -5,12 +5,6 @@ on:
     branches:
       - develop
 
-env:
-  AWS_REGION: us-east-2
-  ECR_REGISTRY: 284101692834.dkr.ecr.us-east-2.amazonaws.com
-  ECR_REPOSITORY: studytrek
-  IMAGE_TAG: latest
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -45,7 +39,9 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+          IMAGE_TAG: ${{ secrets.IMAGE_TAG }}
         run: |
           # Build a docker container and
           # push it to ECR so that it can
