✨ update : #82 JAXB 관련 경고를 해결하기 위한 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,9 @@ dependencies {
 
     // AWS S3
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.303'
+
+    // JAXB
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
 }
 
 tasks.named('test') {
