✨ update : #86 요약 api 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,7 @@ jwt.time.refresh=${jwt.time.refresh}
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+# CLOVA SUMMARY
+naver.clova.clientId=${NAVER_CLOVA_CLIENT_ID}
+naver.clova.clientSecret=${NAVER_CLOVA_CLIENT_SECRET}
