--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,12 @@ dependencies {
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
+    // OkHttp (HTTP 클라이언트)
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+
+    // JSON 처리
+    implementation 'org.json:json:20210307'
 }
 
 tasks.named('test') {
