✨ update : #86 요약 api & test

--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,11 @@ dependencies {
 
     // JAXB
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
+
+    // 로깅
+    implementation 'ch.qos.logback:logback-classic:1.5.6'
+    implementation 'ch.qos.logback:logback-core:1.5.6'
+    implementation 'org.slf4j:slf4j-api:2.1.0-alpha1'
 }
 
 tasks.named('test') {
